alphaindexes/4.4.x/modstatistics.md
# Modules Statistics

([0](#0)) ([1](#1)) ([2](#2)) ([3](#3)) ([4](#4)) ([5](#5)) ([6](#6))
([7](#7)) ([8](#8)) ([9](#9)) ([A](#A)) ([B](#B)) ([C](#C)) ([D](#d))
([E](#E)) ([F](#F)) ([G](#G)) ([H](#H)) ([I](#I)) ([J](#J)) ([K](#k))
([L](#L)) ([M](#M)) ([N](#N)) ([O](#O)) ([P](#P)) ([Q](#Q)) ([R](#r))
([S](#S)) ([T](#T)) ([U](#U)) ([V](#V)) ([W](#W)) ([X](#X)) ([Y](#y))
([Z](#z))

## \[0\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[1\]

| Name            | Module Path | Module Name                                                                           |
|-----------------|-------------|---------------------------------------------------------------------------------------|
| **1xx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.1xx_replies) |

## \[2\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **200_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.200_replies) |
| **202_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.202_replies) |
| **2xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.2xx_replies) |
| **2xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                    |

## \[3\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **300_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.300_replies) |
| **301_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.301_replies) |
| **302_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.302_replies) |
| **3xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.3xx_replies) |
| **3xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                    |

## \[4\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **400_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.400_replies) |
| **401_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.401_replies) |
| **403_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.403_replies) |
| **404_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.404_replies) |
| **407_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.407_replies) |
| **408_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.408_replies) |
| **483_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.483_replies) |
| **4xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.4xx_replies) |
| **4xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                    |

## \[5\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **500_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.500_replies) |
| **5xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.5xx_replies) |
| **5xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                    |

## \[6\]

| Name                 | Module Path | Module Name                                                                           |
|----------------------|-------------|---------------------------------------------------------------------------------------|
| **6xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.6xx_replies) |
| **6xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                    |

## \[7\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[8\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[9\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[A\]

| Name                                                  | Module Path | Module Name                                                                    |
|-------------------------------------------------------|-------------|--------------------------------------------------------------------------------|
| **AAR Timeouts (aar_timeouts)**                       | *modules*   | [ims_qos](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_qos.html)     |
| **accepted_regs**                                     | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.4.x/modules/registrar.html) |
| **active_dialogs**                                    | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.4.x/modules/dialog.html)       |
| **active_rooms**                                      | *modules*   | [imc](http://www.kamailio.org/docs/modules/4.4.x/modules/imc.html)             |
| **active_transactions**                               | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)             |
| **added_branches**                                    | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/4.4.x/modules/tsilo.html)         |
| **Average AAR Response Time (aar_avg_response_time)** | *modules*   | [ims_qos](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_qos.html)     |
| **Average LIR Response Time (lir_avg_response_time)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_icscf.html) |
| **Average MAR Response Time (mar_avg_response_time)** | *modules*   | [ims_auth](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_auth.html)   |
| **Average UAR Response Time (uar_avg_response_time)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_icscf.html) |

## \[B\]

| Name                             | Module Path | Module Name                                                                          |
|----------------------------------|-------------|--------------------------------------------------------------------------------------|
| **Billed seconds (billed_secs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html) |

## \[C\]

| Name                                                         | Module Path | Module Name                                                                                |
|--------------------------------------------------------------|-------------|--------------------------------------------------------------------------------------------|
| **CCRs average response time (ccr_avg_response_time)**       | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |
| **CCRs requests, which ended with a timeout (ccr_timeouts)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |
| **CCRs responses time (ccr_responses_time)**                 | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |
| **contacts**                                                 | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.4.x/modules/usrloc.html#usrloc.s.contacts) |

## \[D\]

| Name                 | Module Path | Module Name                                                                            |
|----------------------|-------------|----------------------------------------------------------------------------------------|
| **defaults_expires** | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.4.x/modules/registrar.html)         |
| **dialog_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.4.x/modules/nat_traversal.html) |
| **dumped_messages**  | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.4.x/modules/msilo.html)                 |
| **dumped_reminders** | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.4.x/modules/msilo.html)                 |

## \[E\]

| Name                 | Module Path | Module Name                                                                                        |
|----------------------|-------------|----------------------------------------------------------------------------------------------------|
| **early_dialogs**    | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.4.x/modules/dialog.html)                           |
| **errors**           | *modules*   | [http_async_client](http://www.kamailio.org/docs/modules/4.4.x/modules/http_async_client.html)     |
| **expired contacts** | *modules*   | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_registrar_scscf.html) |
| **expired contacts** | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_usrloc_pcscf.html)       |
| **expired_dialogs**  | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.4.x/modules/dialog.html)                           |
| **expired_sst**      | *modules*   | [sst](http://www.kamailio.org/docs/modules/4.4.x/modules/sst.html)                                 |
| **expires**          | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.4.x/modules/usrloc.html#usrloc.s.expires)          |

## \[F\]

| Name                                          | Module Path | Module Name                                                                          |
|-----------------------------------------------|-------------|--------------------------------------------------------------------------------------|
| **Failed final CCRs (failed_final_ccrs)**     | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html) |
| **Failed initial CCRs (failed_initial_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html) |
| **Failed interim CCRs (failed_interim_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html) |
| **failed_dialogs**                            | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.4.x/modules/dialog.html)             |
| **failed_messages**                           | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.4.x/modules/msilo.html)               |
| **failed_reminders**                          | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.4.x/modules/msilo.html)               |
| **failures**                                  | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.failures)   |
| **Final CCRs (final_ccrs)**                   | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html) |

## \[G\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                            | Module Path | Module Name                                                                                        |
|---------------------------------|-------------|----------------------------------------------------------------------------------------------------|
| **impus**                       | *modules*   | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_registrar_scscf.html) |
| **impus**                       | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_usrloc_pcscf.html)       |
| **Initial CCRs (initial_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)               |
| **Interim CCRs (interim_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)               |
| **inuse_transactions**          | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name                            | Module Path | Module Name                                                                            |
|---------------------------------|-------------|----------------------------------------------------------------------------------------|
| **keepalive_endpoints**         | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.4.x/modules/nat_traversal.html) |
| **Killed calls (killed_calls)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)   |

## \[L\]

| Name                            | Module Path | Module Name                                                                    |
|---------------------------------|-------------|--------------------------------------------------------------------------------|
| **LIR Timeouts (lir_timeouts)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_icscf.html) |

## \[M\]

| Name                            | Module Path | Module Name                                                                    |
|---------------------------------|-------------|--------------------------------------------------------------------------------|
| **MAR Timeouts (mar_timeouts)** | *modules*   | [ims_auth](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_auth.html)   |
| **max_contacts**                | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.4.x/modules/registrar.html) |
| **max_expires**                 | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.4.x/modules/registrar.html) |

## \[N\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path | Module Name                                                              |
|-----------------------|-------------|--------------------------------------------------------------------------|
| **processed_dialogs** | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.4.x/modules/dialog.html) |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                     | Module Path | Module Name                                                                                        |
|--------------------------|-------------|----------------------------------------------------------------------------------------------------|
| **received_ACKs**        | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.received_acks)            |
| **registered contacts**  | *modules*   | [ims_registrar_scscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_registrar_scscf.html) |
| **registered contacts**  | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_usrloc_pcscf.html)       |
| **registered_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.4.x/modules/nat_traversal.html)             |
| **registered_users**     | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.4.x/modules/usrloc.html#usrloc.s.registered_users) |
| **rejected_regs**        | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.4.x/modules/registrar.html)                     |
| **replies**              | *modules*   | [http_async_client](http://www.kamailio.org/docs/modules/4.4.x/modules/http_async_client.html)     |
| **requests**             | *modules*   | [http_async_client](http://www.kamailio.org/docs/modules/4.4.x/modules/http_async_client.html)     |
| **rpl_absorbed**         | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |
| **rpl_generated**        | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |
| **rpl_received**         | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |
| **rpl_relayed**          | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |
| **rpl_sent**             | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                                 |

## \[S\]

| Name                                                 | Module Path | Module Name                                                                                |
|------------------------------------------------------|-------------|--------------------------------------------------------------------------------------------|
| **sent_err_replies**                                 | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.sent_err_replies) |
| **sent_replies**                                     | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.sent_replies)     |
| **stored_messages**                                  | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.4.x/modules/msilo.html)                     |
| **stored_ruris**                                     | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/4.4.x/modules/tsilo.html)                     |
| **stored_transactions**                              | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/4.4.x/modules/tsilo.html)                     |
| **subscribed_endpoints**                             | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.4.x/modules/nat_traversal.html)     |
| **Sucessful final CCRs (successful_final_ccrs)**     | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |
| **Sucessful initial CCRs (successful_initial_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |
| **Sucessful interim CCRs (successful_interim_ccrs)** | *modules*   | [ims_charging](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_charging.html)       |

## \[T\]

| Name                   | Module Path | Module Name                                                                                    |
|------------------------|-------------|------------------------------------------------------------------------------------------------|
| **timeouts**           | *modules*   | [http_async_client](http://www.kamailio.org/docs/modules/4.4.x/modules/http_async_client.html) |
| **total_ruris**        | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/4.4.x/modules/tsilo.html)                         |
| **total_transactions** | *modules*   | [tsilo](http://www.kamailio.org/docs/modules/4.4.x/modules/tsilo.html)                         |

## \[U\]

| Name                            | Module Path | Module Name                                                                             |
|---------------------------------|-------------|-----------------------------------------------------------------------------------------|
| **UAC_transactions**            | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                      |
| **UAR Timeouts (uar_timeouts)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.4.x/modules/ims_icscf.html)          |
| **UAS_transactions**            | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.4.x/modules/tmx.html)                      |
| **users**                       | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.4.x/modules/usrloc.html#usrloc.s.users) |

## \[V\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[W\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[X\]

| Name            | Module Path | Module Name                                                                           |
|-----------------|-------------|---------------------------------------------------------------------------------------|
| **xxx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.4.x/modules/sl.html#sl.stats.xxx_replies) |

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
